--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ django>=2.1,<2.2
 https://github.com/opencivicdata/python-opencivicdata-django/archive/master.zip
 pupa==0.9.0
 https://github.com/opencivicdata/python-legistar-scraper/archive/master.zip
+opencivicdata<2.4,>=2.3
+requests<2.21,>=2.2
 lxml
 sh 
 pytest==4.2.0
